--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/medsafe
+MONGODB_URI=mongodb+srv://criston:criston@software-project.7snczzs.mongodb.net/medsafe?retryWrites=true&w=majority&appName=software-project
 PORT=5000
 JWT_SECRET=your_secret_key_here
