--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "express-validator": "^7.0.1",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.258.0",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
